--- a/notebooks/biggym/biggym_rl.ipynb
+++ b/notebooks/biggym/biggym_rl.ipynb
@@ -6,24 +6,9 @@
         "id": "ssCOanHc8JH_"
       },
       "source": [
-        "# Create Environments with Braxlines Composer\n",
+        "# [BIG-Gym](https://github.com/google/brax/blob/main/brax/experimental/biggym) RL training\n",
         "\n",
-        "[Braxlines Composer](https://github.com/google/brax/blob/main/brax/experimental/composer) allows modular composition of Brax environments. Let's try it out! "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "VYe1kc3a4Oxc"
-      },
-      "source": [
-        "\n",
-        "\n",
-        "```\n",
-        "# This is formatted as code\n",
-        "```\n",
-        "\n",
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/google/brax/blob/main/notebooks/braxlines/composer.ipynb)"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/google/brax/blob/main/notebooks/biggym/biggym_rl.ipynb)\n"
       ]
     },
     {
@@ -56,44 +41,45 @@
         "  import brax\n",
         "\n",
         "from brax.io import html\n",
+        "from brax.experimental import biggym\n",
         "from brax.experimental.composer import composer\n",
         "from brax.experimental.composer.training import mappo\n",
         "from brax.experimental.braxlines import experiments\n",
         "from brax.experimental.braxlines.common import evaluators\n",
         "from brax.experimental.braxlines.common import logger_utils\n",
         "from brax.experimental.braxlines.training import ppo\n",
-        "from brax.experimental.braxlines import experiments\n",
         "\n",
         "if \"COLAB_TPU_ADDR\" in os.environ:\n",
         "  from jax.tools import colab_tpu\n",
         "  colab_tpu.setup_tpu()\n",
         "\n",
-        "def show_env(env, mode):\n",
-        "  if mode == 'print_obs':\n",
-        "    pprint.pprint(composer.get_obs_dict_shape(env))\n",
-        "  elif mode == 'print_sys':\n",
-        "    pprint.pprint(composer.unwrap(env).metadata.config_json)\n",
-        "  else:\n",
-        "    jit_env_reset = jax.jit(env.reset)\n",
-        "    state = jit_env_reset(rng=jax.random.PRNGKey(seed=0))\n",
-        "    clear_output(wait=True)\n",
-        "    return HTML(html.render(env.sys, [state.qp]))"
+        "def show_env(env):\n",
+        "  jit_env_reset = jax.jit(env.reset)\n",
+        "  state = jit_env_reset(rng=jax.random.PRNGKey(seed=0))\n",
+        "  clear_output(wait=True)\n",
+        "  return HTML(html.render(env.sys, [state.qp]))"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "qL2eK6Ipj04B"
+        "id": "j-HZevAii3z-"
       },
       "outputs": [],
       "source": [
-        "# @title List [registered environments](https://github.com/google/brax/blob/main/brax/experimental/composer/envs)\n",
-        "max_n_env = 10 # @param {'type': 'number'}\n",
+        "# @title Register a BIG-Gym registry\n",
+        "registry_name = 'proant' # @param {type: 'string'}\n",
+        "register_all = True # @param {type: 'boolean'}\n",
         "\n",
-        "env_list = composer.list_env()\n",
-        "print(f'# registered envs = {len(env_list)}, e.g.')\n",
-        "pprint.pprint(env_list[:max_n_env])"
+        "with adhoc_import.Google3CitcClient(\"brax3\", \"shanegu\"):\n",
+        "  if register_all:\n",
+        "    biggym.register_all(verbose=True)\n",
+        "    pprint.pprint(biggym.ENVS_BY_TRACKS)\n",
+        "  env_names, comp_names, task_env_names, _ = biggym.register(registry_name)\n",
+        "print(f'env_names: {env_names}')\n",
+        "print(f'comp_names: {comp_names}')\n",
+        "print(f'task_env_names: {task_env_names}')\n"
       ]
     },
     {
@@ -105,7 +91,7 @@
       "outputs": [],
       "source": [
         "#@title Specify an environment\n",
-        "env_name = 'ant_run' # @param ['humanoid_run', 'squidgame', 'sumo', 'follow', 'chase', 'pro_ant_run', 'ant_run', 'ant_chase', 'ant_push']\n",
+        "env_name = 'race_ma__proant__ant' # @param {type: 'string'}\n",
         "output_path = '' # @param {type: 'string'}\n",
         "show_params = True # @param {'type':'boolean'}\n",
         "\n",
@@ -115,10 +101,10 @@
         "  print(f'Saving outputs to {output_path}')\n",
         "\n",
         "if show_params:\n",
-        "  supported_params, support_kwargs = composer.inspect_env(env_name=env_name)\n",
+        "  supported_params, support_kwargs = biggym.inspect_env(env_name=env_name)\n",
         "  print(f'supported_params for \"{env_name}\" =')\n",
         "  pprint.pprint(supported_params)\n",
-        "  print(f'support unlisted kwargs? (i.e. **kwargs): {support_kwargs}')"
+        "  print(f'support variable-length kwargs? (i.e. **kwargs): {support_kwargs}')"
       ]
     },
     {
@@ -130,19 +116,19 @@
       "outputs": [],
       "source": [
         "#@title Create a custom env\n",
-        "# @markdown put a `None` or a `Dict` as `env_params`, based on `supported_params` above\n",
-        "env_params =  None# @param{'type': 'raw'}\n",
+        "env_params =  {'num_legs': 2}# @param{'type': 'raw'}\n",
         "mode = 'viewer'# @param ['print_step', 'print_obs', 'print_sys', 'viewer']\n",
         "ignore_kwargs = True # @param {'type':'boolean'}\n",
         "\n",
         "# check supported params\n",
         "env_params = env_params or {}\n",
-        "composer.assert_env_params(env_name, env_params, ignore_kwargs)\n",
+        "biggym.assert_env_params(env_name, env_params, ignore_kwargs)\n",
         "\n",
         "# create env\n",
         "env_fn = composer.create_fn(env_name=env_name, **env_params)\n",
+        "# env_fn = biggym.create_fn(env_name=env_name, **env_params)\n",
         "env = env_fn()\n",
-        "show_env(env, mode)"
+        "show_env(env)"
       ]
     },
     {
@@ -154,7 +140,7 @@
       "outputs": [],
       "source": [
         "#@title Training the custom env\n",
-        "num_timesteps_multiplier =   3# @param {type: 'number'}\n",
+        "num_timesteps_multiplier =   2# @param {type: 'number'}\n",
         "seed = 0 # @param{type: 'integer'}\n",
         "skip_training = False # @param {type: 'boolean'}\n",
         "\n",
@@ -164,7 +150,7 @@
         "tab = logger_utils.Tabulator(output_path=log_path,\n",
         "    append=False)\n",
         "\n",
-        "ppo_lib = mappo if env.is_multiagent else ppo\n",
+        "ppo_lib = mappo if biggym.is_multiagent(env) else ppo\n",
         "ppo_params = experiments.defaults.get_ppo_params(\n",
         "    'ant', num_timesteps_multiplier)\n",
         "train_fn = functools.partial(ppo_lib.train, **ppo_params)\n",
@@ -180,7 +166,7 @@
         "\n",
         "if skip_training:\n",
         "  action_size = (env.group_action_shapes if \n",
-        "    env.is_multiagent else env.action_size)\n",
+        "    biggym.is_multiagent(env) else env.action_size)\n",
         "  params, inference_fn = ppo_lib.make_params_and_inference_fn(\n",
         "    env.observation_size, action_size,\n",
         "    normalize_observations=True)\n",
@@ -238,12 +224,16 @@
         "build_target": "//learning/deepmind/public/tools/ml_python:ml_notebook",
         "kind": "private"
       },
-      "name": "composer.ipynb",
+      "name": "biggym_rl.ipynb",
       "private_outputs": true,
       "provenance": [
         {
+          "file_id": "1PWXVD5BforifYfej0R-PQaW8T6hlFuJ6",
+          "timestamp": 1639371048931
+        },
+        {
           "file_id": "1BCqjiaBc13bQK1gQiEMUQGrxjPTov2EN",
-          "timestamp": 1639370433605
+          "timestamp": 1639058480819
         },
         {
           "file_id": "1ZaAO4BS2tJ_03CIXdBCFibZR2yLl6dtv",
