--- a/notebooks/biggym/biggym_rl.ipynb
+++ b/notebooks/biggym/biggym_rl.ipynb
@@ -72,11 +72,10 @@
         "registry_name = 'proant' # @param {type: 'string'}\n",
         "register_all = True # @param {type: 'boolean'}\n",
         "\n",
-        "with adhoc_import.Google3CitcClient(\"brax3\", \"shanegu\"):\n",
-        "  if register_all:\n",
-        "    biggym.register_all(verbose=True)\n",
-        "    pprint.pprint(biggym.ENVS_BY_TRACKS)\n",
-        "  env_names, comp_names, task_env_names, _ = biggym.register(registry_name)\n",
+        "if register_all:\n",
+        "  biggym.register_all(verbose=True)\n",
+        "  pprint.pprint(biggym.ENVS_BY_TRACKS)\n",
+        "env_names, comp_names, task_env_names, _ = biggym.register(registry_name)\n",
         "print(f'env_names: {env_names}')\n",
         "print(f'comp_names: {comp_names}')\n",
         "print(f'task_env_names: {task_env_names}')\n"
@@ -91,7 +90,7 @@
       "outputs": [],
       "source": [
         "#@title Specify an environment\n",
-        "env_name = 'race_ma__proant__ant' # @param {type: 'string'}\n",
+        "env_name = 'sumo__proant__ant' # @param {type: 'string'}\n",
         "output_path = '' # @param {type: 'string'}\n",
         "show_params = True # @param {'type':'boolean'}\n",
         "\n",
@@ -229,7 +228,7 @@
       "provenance": [
         {
           "file_id": "1PWXVD5BforifYfej0R-PQaW8T6hlFuJ6",
-          "timestamp": 1639371048931
+          "timestamp": 1639457023559
         },
         {
           "file_id": "1BCqjiaBc13bQK1gQiEMUQGrxjPTov2EN",
