--- a/notebooks/basics.ipynb
+++ b/notebooks/basics.ipynb
@@ -610,8 +610,8 @@
         "    \u003c/body\u003e\n",
         "  \u003c/worldbody\u003e\n",
         "  \u003cactuator\u003e\n",
-        "    \u003cposition joint=\"joint1\" gear=\"250\"/\u003e\n",
-        "    \u003cposition joint=\"joint2\" gear=\"250\"/\u003e\n",
+        "    \u003cposition joint=\"joint1\" kp=\"250\"/\u003e\n",
+        "    \u003cposition joint=\"joint2\" kp=\"250\"/\u003e\n",
         "  \u003c/actuator\u003e\n",
         "\u003c/mujoco\u003e\n",
         "\"\"\")"
