--- a/docs/release-notes/v0.10.1.md
+++ b/docs/release-notes/v0.10.1.md
@@ -1,4 +1,4 @@
-# Brax Release Notes
+# Brax v0.10.1 Release Notes
 
 * Fixes #460, #461, and an issue related to #353.
 * Removes barkour v0 joystick policy in favor of the [MJX tutorial](https://colab.research.google.com/github/google-deepmind/mujoco/blob/main/mjx/tutorial.ipynb) training barkour vb.
