--- a/brax/experimental/barkour/tutorial.ipynb
+++ b/brax/experimental/barkour/tutorial.ipynb
@@ -281,7 +281,7 @@
         "    path = epath.Path('mujoco_menagerie/google_barkour_v0/scene_mjx.xml')\n",
         "    sys = mjcf.load(path.as_posix())\n",
         "    self._dt = 0.02  # this environment is 50 fps\n",
-        "    sys = sys.tree_replace({'opt.timestep': 0.004, 'dt': 0.004})\n",
+        "    sys = sys.tree_replace({'opt.timestep': 0.004})\n",
         "\n",
         "    # override menagerie params for smoother policy\n",
         "    sys = sys.replace(\n",
