--- a/brax/experimental/barkour/tutorial.ipynb
+++ b/brax/experimental/barkour/tutorial.ipynb
@@ -814,7 +814,7 @@
       },
       "outputs": [],
       "source": [
-        "HTML(html.render(eval_env.sys.replace(dt=eval_env.dt), rollout))"
+        "HTML(html.render(eval_env.sys.tree_replace({'opt.timestep': eval_env.dt}), rollout))"
       ]
     }
   ],
