--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -424,7 +424,7 @@
         "  act, _ = jit_inference_fn(state.obs, act_rng)\n",
         "  state = jit_env_step(state, act)\n",
         "\n",
-        "HTML(html.render(env.sys.replace(dt=env.dt), rollout))"
+        "HTML(html.render(env.sys.tree_replace({'opt.timestep': env.dt}), rollout))"
       ]
     },
     {
@@ -437,7 +437,7 @@
       ]
     }
   ],
- "metadata": {
+  "metadata": {
     "colab": {
       "provenance": [],
       "toc_visible": true
