--- a/docs/release-notes/v0.10.5.md
+++ b/docs/release-notes/v0.10.5.md
@@ -1,4 +1,4 @@
-# Brax Release Notes
+# Brax v0.10.5 Release Notes
 
 * Modify `policy_params_fn` in the PPO implementation to take in the full model params. This can be used for checkpointing models.
 * Add `restore_checkpoint_path` in PPO implementation.
