Update basics notebook to use opt.timestep field

--- a/notebooks/basics.ipynb
+++ b/notebooks/basics.ipynb
@@ -542,7 +542,8 @@
         "link = pendulum.link.replace(\n",
         "    constraint_stiffness=jp.repeat(stiffness, 3),\n",
         "    constraint_vel_damping=jp.zeros((3,)))\n",
-        "pendulum = pendulum.replace(dt=0.01 / substeps, link=link)\n",
+        "pendulum = pendulum.replace(link=link)\n",
+        "pendulum = pendulum.tree_replace({'opt.timestep': 0.01 / substeps})\n",
         "\n",
         "init_q = jp.array([initial_angle * jp.pi / 180, 0, 0])\n",
         "state = jax.jit(pipeline.init)(pendulum, init_q, jp.zeros(pendulum.qd_size()))\n",
