Upgrade gym in training_torch notebook to fix env vectorization

--- a/notebooks/training_torch.ipynb
+++ b/notebooks/training_torch.ipynb
@@ -27,9 +27,20 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install --upgrade gym --quiet"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "id": "GJhPpM5ZPrpq"
       },
+      "outputs": [],
       "source": [
         "#@title Import Brax and some helper modules\n",
         "from IPython.display import clear_output\n",
